# swagger_output.json
@@ -130,6 +130,21 @@
                 "name": "main"
               }
             }
+          },
+          "404": {
+            "description": "File not found.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -152,6 +167,39 @@
         "responses": {
           "200": {
             "description": "File Content."
+          }
+        }
+      }
+    },
+    "/file/delete/{pathfile}": {
+      "get": {
+        "tags": [
+          "File"
+        ],
+        "description": "clear temp files.",
+        "parameters": [
+          {
+            "name": "pathfile",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "expected result.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "success"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
